--- a/about.html
+++ b/about.html
@@ -288,6 +288,7 @@ $(document).ready(function () {
 <div id="academic-history"
 class="section level2 tabset tabset-fade tabset-pills">
 <h2 class="tabset tabset-fade tabset-pills">Academic History</h2>
+<p>boop</p>
 <div id="cornell-university" class="section level3">
 <h3>Cornell University</h3>
 <ul>
