--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 
 
 
-<title>University Experience</title>
+<title>about.knit</title>
 
 <script src="site_libs/header-attrs-2.16/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -280,17 +280,29 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">University Experience</h1>
 
 </div>
 
 
-<div id="academic-history"
+<p><br> <br> <br></p>
+<p align="center">
+<font size = "20"> Research </font>
+</p>
+<div id="section"
 class="section level2 tabset tabset-fade tabset-pills">
-<h2 class="tabset tabset-fade tabset-pills">Academic History</h2>
-<p>boop</p>
-<div id="cornell-university" class="section level3">
-<h3>Cornell University</h3>
+<h2 class="tabset tabset-fade tabset-pills"></h2>
+<div id="summary" class="section level3">
+<h3>Summary</h3>
+<p>My research brings together elements of trophic and community
+ecology.</p>
+</div>
+<div id="section-1" class="section level3">
+<h3>[]<img src="NRD.jpg" style="border:10px solid; margin-right: 20px" width="150px"></h3>
+<font size = 10> The Varied Role of Mesopredators in Lake Food Webs
+</p>
+</div>
+<div id="section-2" class="section level3">
+<h3>[]<img src="lionfish.JPG" style="border:10px solid; margin-right: 20px" width="150px"></h3>
 <ul>
 <li>PhD Student (2019 to Present)</li>
 </ul>
@@ -301,20 +313,7 @@ class="section level2 tabset tabset-fade tabset-pills">
 <li>M.A. Student in Ecology, Evolution, and Environmental Biology (2017
 to 2019)</li>
 </ul>
-</div>
-<div id="boston-university" class="section level3">
-<h3>Boston University</h3>
-<ul>
-<li>B.A. in Marine Science (2013-2017)</li>
-<li>B.A. in Environmental Science (2013-2017)</li>
-</ul>
-</div>
-<div id="example" class="section level3">
-<h3>Example</h3>
-<ul>
-<li>Something</li>
-<li>Something</li>
-</ul>
+</p>
 </div>
 </div>
 
