--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/M_Airey.jpg" alt="" /></a>
-					<h1><strong>Montana Airey</strong>, a super simple<br />
-					responsive site template freebie<br />
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+					<a href="#" class="image avatar"><img src="images/Montana_MWT.jpg" alt="" /></a>
+					<h1><strong>Montana Airey</strong><br />
+					PhD Candidate<br />
+					Cornell University <a href="http://html5up.net">HTML5 UP</a>.</h1>
 				</div>
 			</header>
 
