--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<a href="#" class="image avatar"><img src="images/Montana_MWT.jpg" alt="" /></a>
 					<h1><strong>Montana Airey</strong><br />
 					PhD Candidate<br />
-					Cornell University <a href="http://html5up.net">HTML5 UP</a>.</h1>
+					Cornell University.</h1>
 				</div>
 			</header>
 
@@ -32,7 +32,7 @@
 							<h2>Aquatic ecologist interested in the intersection<br />
 							between trophic and community ecology.</h2>
 						</header>
-						<p>Hi this can be a long text string.</p>
+						<p>I am a PhD candidate in the lab of Dr. Pete McIntyre in the Department of Ecology and Evolutionary Biology at Cornell. I am broadly interested in the distribution of aquatic species across landscapes and understanding how that distribution is shaped by trophic interactions. I utilize stable isotope ecology to measure the niche size and overlap across aquatic organisms, and examine energy flow across benthic and pelagic food webs. My work also focuses on the use of long-term community data and both fine- and broad-scale spatial data to characterize, temporal population trends, habitat use, and species assemblages.  </p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
