--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<a href="#" class="image avatar"><img src="images/Montana_MWT.jpg" alt="" /></a>
 					<h1><strong>Montana Airey</strong><br />
 					PhD Candidate<br />
-					Cornell University.</h1>
+					Cornell University</h1>
 				</div>
 			</header>
 
@@ -35,7 +35,7 @@
 						<p>I am a PhD candidate in the lab of Dr. Pete McIntyre in the Department of Ecology and Evolutionary Biology at Cornell. I am broadly interested in the distribution of aquatic species across landscapes and understanding how that distribution is shaped by trophic interactions. I utilize stable isotope ecology to measure the niche size and overlap across aquatic organisms, and examine energy flow across benthic and pelagic food webs. My work also focuses on the use of long-term community data and both fine- and broad-scale spatial data to characterize, temporal population trends, habitat use, and species assemblages.  </p>
 
 						<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">hello@untitled.tld</a>
+										<a href="#">ma2276@cornell.edu</a> </p>
 
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
@@ -47,24 +47,24 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/fulls/lionfish.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+								<h3>Lionfish Dispersal</h3>
+								<p>Using otolith microchemistry to track dispersal of lionfish between deep and shallow habitat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/fulls/lake.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
+								<h3>Non-native predators in montane lakes</h3>
+								<p>Using community data from the Adirondack park to determine patterns of species assemblages.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/fulls/lake2.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
+								<h3>Fine-scale habitat use of native littoral fishes</h3>
+								<p>Using a two-decade long study of fish communities in two Adirondack lakes to examine patterns of habitat use and species associations.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/fulls/bg.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
+								<h3>Trophic diversity of native minnows</h3>
+								<p>Using stable isotopes to examine the trophic diversity, niche overlap, and diet specialization of native leuciscidae.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
