--- a/index.html
+++ b/index.html
@@ -47,22 +47,22 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/lionfish.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+								<a href="images/fulls/lionfish.jpg" class="image fit thumb"><img src="images/thumbs/lionfish.jpg" alt="" /></a>
 								<h3>Lionfish Dispersal</h3>
 								<p>Using otolith microchemistry to track dispersal of lionfish between deep and shallow habitat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/lake.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
+								<a href="images/fulls/lake.jpg" class="image fit thumb"><img src="images/thumbs/lake.jpg" alt="" /></a>
 								<h3>Non-native predators in montane lakes</h3>
 								<p>Using community data from the Adirondack park to determine patterns of species assemblages.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/lake2.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
+								<a href="images/fulls/lake2.jpg" class="image fit thumb"><img src="images/thumbs/lake2.jpg" alt="" /></a>
 								<h3>Fine-scale habitat use of native littoral fishes</h3>
 								<p>Using a two-decade long study of fish communities in two Adirondack lakes to examine patterns of habitat use and species associations.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/bg.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
+								<a href="images/fulls/bg.jpg" class="image fit thumb"><img src="images/thumbs/bg.jpg" alt="" /></a>
 								<h3>Trophic diversity of native minnows</h3>
 								<p>Using stable isotopes to examine the trophic diversity, niche overlap, and diet specialization of native leuciscidae.</p>
 							</article>
