--- a/index.html
+++ b/index.html
@@ -103,17 +103,14 @@
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										1234 Somewhere Rd.<br />
-										Nashville, TN 00000<br />
+										Corson Hall, Cornell University.<br />
+										Ithaca, NY, 14850 <br />
 										United States
 									</li>
-									<li>
-										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-										000-000-0000
-									</li>
+
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">hello@untitled.tld</a>
+										<a href="#">ma2276@cornell.edu</a>
 									</li>
 								</ul>
 							</div>
