--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/lake.jpg" class="image fit thumb"><img src="images/thumbs/lake.jpg" alt="" /></a>
+								<a href="images/fulls/lake.jpg" class="image fit thumb"><img src="images/thumbs/lionfish.jpg" alt="" /></a>
 								<h3>Lionfish Dispersal</h3>
 								<p>Using otolith microchemistry to track dispersal of lionfish between deep and shallow habitat.</p>
 							</article>
@@ -103,7 +103,7 @@
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										Corson Hall, Cornell University.<br />
+										Corson Hall, Cornell University<br />
 										Ithaca, NY, 14850 <br />
 										United States
 									</li>
