--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/Montana_MWT.jpg" alt="" /></a>
+					<a href="#" class="image avatar"><img src="images/Montana_MWT_small.jpg" alt="" /></a>
 					<h1><strong>Montana Airey</strong><br />
 					PhD Candidate<br />
 					Cornell University</h1>
