--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/lionfish.jpg" class="image fit thumb"><img src="images/thumbs/new.jpg" alt="" /></a>
+								<a href="images/fulls/lionfish.jpg" class="image fit thumb"><img src="images/thumbs/lionfish_thumb.jpg" alt="" /></a>
 								<h3>Lionfish Dispersal</h3>
 								<p>Using otolith microchemistry to track dispersal of lionfish between deep and shallow habitat.</p>
 							</article>
