--- a/index.html
+++ b/index.html
@@ -79,6 +79,27 @@
 
 				<section id="three">
 						<h2>Education and Resume</h2>
+
+
+						<head>
+						    <meta charset="UTF-8">
+						    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+						    <title>PDF Viewer</title>
+						    <style>
+						        body {
+						            font-family: Arial, sans-serif;
+						        }
+						        .pdf-container {
+						            width: 100%;
+						            height: 600px; /* You can adjust the height as needed */
+						            border: none;
+						        }
+						    </style>
+						</head>
+						<body>
+						    <h1>PDF Viewer</h1>
+						    <iframe src="pdfs/CV.pdf" class="pdf-container"></iframe>
+						</body>
 						
 					</section>
 
