--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 						<head>
 						    <meta charset="UTF-8">
 						    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-						    <title>PDF Viewer</title>
+						    <title>CV</title>
 						    <style>
 						        body {
 						            font-family: Arial, sans-serif;
@@ -92,12 +92,12 @@
 						        .pdf-container {
 						            width: 100%;
 						            height: 600px; /* You can adjust the height as needed */
-						            border: none;
+						            border: inset;
 						        }
 						    </style>
 						</head>
 						<body>
-						    <h1>PDF Viewer</h1>
+						    <h1>CV</h1>
 						    <iframe src="pdfs/CV.pdf" class="pdf-container"></iframe>
 						</body>
 						
