--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 						        }
 						        .pdf-container {
 						            width: 100%;
-						            height: 600px; /* You can adjust the height as needed */
-						            border: inset;
+						            height: 300px; /* You can adjust the height as needed */
+						            border: outset;
 						        }
 						    </style>
 						</head>
