--- a/index.html
+++ b/index.html
@@ -47,9 +47,26 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/lionfish.jpg" class="image fit thumb"><img src="images/thumbs/lionfish_thumb.jpg" alt="" /></a>
+							<a href="#" class="image fit thumb" onclick="openModal(event)">
+        						<img src="images/thumbs/lionfish_thumb.jpg" alt="Lionfish Thumbnail" />
+   							</a>
 								<h3>Lionfish Dispersal</h3>
 								<p>Using otolith microchemistry to track dispersal of lionfish between deep and shallow habitat.</p>
+
+							<!-- Modal Content -->
+								<div id="modal" class="modal">
+								    <div class="modal-content">
+								        <span class="close" onclick="closeModal()">&times;</span>
+								        <h2>Lionfish Dispersal</h2>
+								        <p>Details about the project here...</p>
+								        <img src="images/fulls/lionfish.jpg" alt="Lionfish Full" />
+								        <p>Additional images or information can go here...</p>
+								        </div>
+								    </div>
+
+
+
+
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/lake.jpg" class="image fit thumb"><img src="images/thumbs/lake.jpg" alt="" /></a>
@@ -91,7 +108,7 @@
 						        }
 						        .pdf-container {
 						            width: 100%;
-						            height: 300px; /* You can adjust the height as needed */
+						            height: 450px; /* You can adjust the height as needed */
 						            border: outset;
 						        }
 						    </style>
