--- a/index.html
+++ b/index.html
@@ -46,6 +46,53 @@
 					<section id="two">
 						<h2>Recent Work</h2>
 						<div class="row">
+							<!DOCTYPE html>
+							<html lang="en">
+							<head>
+							    <meta charset="UTF-8">
+							    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+							    <title>Modal Example</title>
+							    <style>
+							        /* CSS styles for modal and its content */
+							        .modal {
+							            display: none;
+							            position: fixed;
+							            z-index: 1000;
+							            left: 0;
+							            top: 0;
+							            width: 100%;
+							            height: 100%;
+							            overflow: auto;
+							            background-color: rgba(0,0,0,0.8);
+							        }
+
+							        .modal-content {
+							            background-color: #fefefe;
+							            margin: 10% auto;
+							            padding: 20px;
+							            border: 1px solid #888;
+							            width: 80%;
+							            max-width: 800px;
+							            position: relative;
+							            border-radius: 10px;
+							        }
+
+							        .close {
+							            color: #aaa;
+							            float: right;
+							            font-size: 28px;
+							            font-weight: bold;
+							            cursor: pointer;
+							        }
+
+							        .close:hover,
+							        .close:focus {
+							            color: black;
+							            text-decoration: none;
+							        }
+							    </style>
+							</head>
+							<body>
 
 							<article class="col-6 col-12-xsmall work-item">
 							    <a href="#" class="image fit thumb" onclick="openModal(event)">
@@ -65,7 +112,31 @@
 							        </div>
 							    </div>
 							</article>
+							<script>
+							    // Function to open the modal
+							    function openModal(event) {
+							        event.preventDefault();
+							        var modal = document.getElementById("modal");
+							        modal.style.display = "block";
+							    }
 
+							    // Function to close the modal
+							    function closeModal() {
+							        var modal = document.getElementById("modal");
+							        modal.style.display = "none";
+							    }
+
+							    // Close the modal if user clicks outside of it
+							    window.onclick = function(event) {
+							        var modal = document.getElementById("modal");
+							        if (event.target == modal) {
+							            modal.style.display = "none";
+							        }
+							    }
+							</script>
+
+							</body>
+							</html>
 
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
