--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
 							<body>
 
 							<article class="col-6 col-12-xsmall work-item">
-							    
+							    <a href="#" class="image fit thumb" onclick="openModal(event)">
+							        <img src="images/thumbs/lionfish_thumb.jpg" alt="Lionfish Thumbnail" />
+							    </a>
 							    <h3>Lionfish Dispersal</h3>
 							    <p>Using otolith microchemistry to track dispersal of lionfish between deep and shallow habitat.</p>
 
@@ -105,7 +107,7 @@
 							            <span class="close" onclick="closeModal()">&times;</span>
 							            <h2>Lionfish Dispersal</h2>
 							            <p>Details about the project here...</p>
-							            <img src="images/fulls/lionfish.jpg" alt="Lionfish Full" />
+							            
 							            <p>Additional images or information can go here...</p>
 							        </div>
 							    </div>
