--- a/index.html
+++ b/index.html
@@ -46,98 +46,10 @@
 					<section id="two">
 						<h2>Recent Work</h2>
 						<div class="row">
-							<!DOCTYPE html>
-							<html lang="en">
-							<head>
-							    <meta charset="UTF-8">
-							    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-							    <title>Modal Example</title>
-							    <style>
-							        /* CSS styles for modal and its content */
-							        .modal {
-							            display: none;
-							            position: fixed;
-							            z-index: 1000;
-							            left: 0;
-							            top: 0;
-							            width: 100%;
-							            height: 100%;
-							            overflow: auto;
-							            background-color: rgba(0,0,0,0.8);
-							        }
-
-							        .modal-content {
-							            background-color: #fefefe;
-							            margin: 10% auto;
-							            padding: 20px;
-							            border: 1px solid #888;
-							            width: 80%;
-							            max-width: 800px;
-							            position: relative;
-							            border-radius: 10px;
-							        }
-
-							        .close {
-							            color: #aaa;
-							            float: right;
-							            font-size: 28px;
-							            font-weight: bold;
-							            cursor: pointer;
-							        }
-
-							        .close:hover,
-							        .close:focus {
-							            color: black;
-							            text-decoration: none;
-							        }
-							    </style>
-							</head>
-							<body>
-
 							<article class="col-6 col-12-xsmall work-item">
-							    <a href="#" class="image fit thumb" onclick="openModal(event)">
-							        <img src="images/thumbs/lionfish_thumb.jpg" alt="Lionfish Thumbnail" />
-							    </a>
-							    <h3>Lionfish Dispersal</h3>
-							    <p>Using otolith microchemistry to track dispersal of lionfish between deep and shallow habitat.</p>
-
-							    <!-- Modal Content -->
-							    <div id="modal" class="modal">
-							        <div class="modal-content">
-							            <span class="close" onclick="closeModal()">&times;</span>
-							            <h2>Lionfish Dispersal</h2>
-							            <p>Details about the project here...</p>
-							            
-							            <p>Additional images or information can go here...</p>
-							        </div>
-							    </div>
-							</article>
-							<script>
-							    // Function to open the modal
-							    function openModal(event) {
-							        event.preventDefault();
-							        var modal = document.getElementById("modal");
-							        modal.style.display = "block";
-							    }
-
-							    // Function to close the modal
-							    function closeModal() {
-							        var modal = document.getElementById("modal");
-							        modal.style.display = "none";
-							    }
-
-							    // Close the modal if user clicks outside of it
-							    window.onclick = function(event) {
-							        var modal = document.getElementById("modal");
-							        if (event.target == modal) {
-							            modal.style.display = "none";
-							        }
-							    }
-							</script>
-
-							</body>
-							</html>
-
+								<a href="images/fulls/lionfish.jpg" class="image fit thumb"><img src="images/thumbs/lionfish_thumb.jpg" alt="" /></a>
+								<h3>Lionfish Dispersal</h3>
+								<p>Using otolith microchemistry to track dispersal of lionfish between deep and shallow habitat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/lake.jpg" class="image fit thumb"><img src="images/thumbs/lake.jpg" alt="" /></a>
@@ -179,7 +91,7 @@
 						        }
 						        .pdf-container {
 						            width: 100%;
-						            height: 450px; /* You can adjust the height as needed */
+						            height: 400px; /* You can adjust the height as needed */
 						            border: outset;
 						        }
 						    </style>
