--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 								<p>Using a two-decade long study of fish communities in two Adirondack lakes to examine patterns of habitat use and species associations.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="#project-details" class="image fit thumb"><img src="images/thumbs/bg.jpg" alt="" /></a>
+								<a href="#project-details"><img src="images/thumbs/bg.jpg" alt="" /></a>
 								<h3>Trophic diversity of native minnows</h3>
 								<p>Using stable isotopes to examine the trophic diversity, niche overlap, and diet specialization of native leuciscidae.</p>
 							</article>
