--- a/index.html
+++ b/index.html
@@ -4,43 +4,14 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Research Home</title>
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <style>
-        /* Example CSS styles */
-        section {
-            height: 100vh; /* Full viewport height */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            font-size: 2rem;
-            background-color: #f0f0f0;
-        }
-        article {
-            margin-bottom: 20px;
-        }
-        /* Styles for thumbnails */
-        .thumb img {
-            max-width: 150px; /* Set your desired max width */
-            max-height: 150px; /* Set your desired max height */
-            width: auto;
-            height: auto;
-        }
-        .pdf-container {
-            width: 100%;
-            height: 400px; /* You can adjust the height as needed */
-            border: outset;
-        }
-    </style>
-</head>
-<body class="is-preload">
+<html>
+	<head>
+		<title>Reseach Home</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+	</head>
+	<body class="is-preload">
 
 		<!-- Header -->
 			<header id="header">
@@ -52,17 +23,10 @@
 				</div>
 			</header>
 
-
-
-
 		<!-- Main -->
 			<div id="main">
 
 				<!-- One -->
-
-
-
-
 					<section id="one">
 						<header class="major">
 							<h2>Aquatic ecologist interested in the intersection<br />
@@ -98,7 +62,7 @@
 								<p>Using a two-decade long study of fish communities in two Adirondack lakes to examine patterns of habitat use and species associations.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="#project-details"><img src="images/thumbs/bg.jpg" alt="" /></a>
+								<a href="images/fulls/bg.jpg" class="image fit thumb"><img src="images/thumbs/bg.jpg" alt="" /></a>
 								<h3>Trophic diversity of native minnows</h3>
 								<p>Using stable isotopes to examine the trophic diversity, niche overlap, and diet specialization of native leuciscidae.</p>
 							</article>
@@ -553,7 +517,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
     scrollLinks.forEach(link => {
         link.addEventListener('click', scrollToSection);
     });
-	</script>
+</script>
 
 
 
