--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 								<a href="images/fulls/bg.jpg" class="image fit thumb"><img src="images/thumbs/bg.jpg" alt="" /></a>
 								<h3>Trophic diversity of native minnows</h3>
 								<p>Using stable isotopes to examine the trophic diversity, niche overlap, and diet specialization of native leuciscidae.</p>
+								<a href="#minnows-details" class="button">Learn More</a>
 							</article>
 
 
