--- a/index.html
+++ b/index.html
@@ -65,16 +65,10 @@
 								<a href="images/fulls/bg.jpg" class="image fit thumb"><img src="images/thumbs/bg.jpg" alt="" /></a>
 								<h3>Trophic diversity of native minnows</h3>
 								<p>Using stable isotopes to examine the trophic diversity, niche overlap, and diet specialization of native leuciscidae.</p>
-								<a href="#minnows-details" class="button">Learn More</a>
+								<a href="#project-details" class="button">Learn More</a>
 							</article>
 
 
-							<article class="col-6 col-12-xsmall work-item">
-    							<a href="#project-details"><img src="images/thumbs/lake2.jpg" alt="lake thumbnail" />
-    							</a>
-    							<h3>Testing Section</h3>
-   								<p>Testing</p>
-							</article>
 
 						</div>
 						<ul class="actions">
