--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
 						</header>
 						<p>I am a PhD candidate in the lab of Dr. Pete McIntyre in the Department of Ecology and Evolutionary Biology at Cornell. I am broadly interested in the distribution of aquatic species across landscapes and understanding how that distribution is shaped by trophic interactions. I utilize stable isotope ecology to measure the niche size and overlap across aquatic organisms, and examine energy flow across benthic and pelagic food webs. My work also focuses on the use of long-term community data and both fine- and broad-scale spatial data to characterize commmunities, temporal population trends, habitat use, and species assemblages.  </p>
 
-						<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">ma2276@cornell.edu</a> </p>
 
+						<ul class="actions">
+							<li><a href="#Get-in-touch" class="button">Contact</a></li>
+						</ul>
+						
 					</section>
 
 				<!-- Two -->
@@ -68,9 +70,7 @@
 
 
 						</div>
-						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
-						</ul>
+						
 					</section>
 
 
@@ -114,7 +114,7 @@
 
 
 				<!-- Four -->
-					<section id="four">
+					<section id="Get-in-touch">
 						<h2>Get In Touch</h2>
 						<p>Interested in chatting fish or collaborating? Reach out!</p>
 						<div class="row">
