--- a/index.html
+++ b/index.html
@@ -46,19 +46,22 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/lionfish.jpg" class="image fit thumb"><img src="images/thumbs/lionfish_thumb.jpg" alt="" /></a>
+								<a href="images/fulls/lionfish_thumb.jpg" class="image fit thumb"><img src="images/thumbs/lionfish_thumb.jpg" alt="" /></a>
 								<h3>Lionfish Dispersal</h3>
 								<p>Using otolith microchemistry to track dispersal of lionfish between deep and shallow habitat.</p>
+								<a href="#project-details" class="button">Learn More</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/lake.jpg" class="image fit thumb"><img src="images/thumbs/lake.jpg" alt="" /></a>
 								<h3>Non-native predators in montane lakes</h3>
 								<p>Using community data from the Adirondack park to determine patterns of species assemblages.</p>
+								<a href="#project-details" class="button">Learn More</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/lake2.jpg" class="image fit thumb"><img src="images/thumbs/lake2.jpg" alt="" /></a>
 								<h3>Fine-scale habitat use of native littoral fishes</h3>
 								<p>Using a two-decade long study of fish communities in two Adirondack lakes to examine patterns of habitat use and species associations.</p>
+								<a href="#project-details" class="button">Learn More</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/bg.jpg" class="image fit thumb"><img src="images/thumbs/bg.jpg" alt="" /></a>
