--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
 						<ul class="actions">
 							<li><a href="#Get-in-touch" class="button">Contact</a></li>
 						</ul>
+						<ul class="actions">
+							<li><a href="#CV" class="button">CV</a></li>
+						</ul>
 						
 					</section>
 
@@ -60,7 +63,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/lake2.jpg" class="image fit thumb"><img src="images/thumbs/lake2.jpg" alt="" /></a>
 								<h3>Fine-scale habitat use of native littoral fishes</h3>
-								<p>Using a two-decade long study of fish communities in two Adirondack lakes to examine patterns of habitat use and species associations.</p>
+								<p>Using a two-decade long study of fish communities in Adirondack lakes to examine habitat use and species associations.</p>
 								<a href="#project-details" class="button">Learn More</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
@@ -87,7 +90,7 @@
 				</section>
 
 
-				<section id="three">
+				<section id="CV">
 						<h2>Education and Resume</h2>
 
 
