--- a/index.html
+++ b/index.html
@@ -149,6 +149,13 @@
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
 										<a href="#">ma2276@cornell.edu</a>
+
+
+										<div style="text-align: right;">
+									    <ul class="actions" style="display: inline-block; margin-right: 10px;">
+									        <li><a href="#one" class="button">Back to top</a></li>
+									    </ul>
+									  	</div>
 									</li>
 								</ul>
 							</div>
