--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
 									<div style="text-align: right;">
 									    <ul class="actions" style="display: inline-block; margin-right: 10px;">
-									        <li><a href="#one" class="button">Back to top</a></li>
+									        <li><a href="#one" class="button">Back to top!</a></li>
 									    </ul>
 									</div>
 							</div>
