--- a/index.html
+++ b/index.html
@@ -136,6 +136,14 @@
 								<ul class="actions">
 									<li><input type="submit" value="Send Message" /></li>
 								</ul>
+								<div style="text-align: right;">
+								    <ul class="actions" style="display: inline-block; margin-right: 10px;">
+								        <li><a href="#Get-in-touch" class="button">Contact</a></li>
+								    </ul>
+								    <ul class="actions" style="display: inline-block;">
+								        <li><a href="#CV" class="button">CV</a></li>
+								    </ul>
+								</div>
 							</div>
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
