--- a/index.html
+++ b/index.html
@@ -127,27 +127,25 @@
 
 							<div style="text-align: right;">
 								<ul class="actions" style="display: inline-block; margin-right: 10px;">
-								    <li><a href="#Get-in-touch" class="button">Contact</a></li>
+								    <li><a href="#main" class="button">Return to top!</a></li>
 								</ul>
-								    <ul class="actions" style="display: inline-block;">
-							        <li><a href="#CV" class="button">CV</a></li>
-							    </ul>
 							</div>
 
 
 
 
 							< <ul class="labeled-icons">
+
+
+				                <li>
+				                    <h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
+				                    <a href="mailto:ma2276@cornell.edu">ma2276@cornell.edu</a>
+				                </li>
 				                <li>
 				                    <h3 class="icon solid fa-home"><span class="label">Address</span></h3>
 				                    Corson Hall, Cornell University<br />
 				                    Ithaca, NY, 14850 <br />
 				                    United States
-				                </li>
-
-				                <li>
-				                    <h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-				                    <a href="mailto:ma2276@cornell.edu">ma2276@cornell.edu</a>
 				                </li>
 				            </ul>
 									
