--- a/index.html
+++ b/index.html
@@ -125,16 +125,8 @@
 						<h2>Get In Touch</h2>
 						<p>Interested in chatting fish or collaborating? Reach out!</p>
 
-							<div style="text-align: right;">
-								<ul class="actions" style="display: inline-block; margin-right: 10px;">
-								    <li><a href="#main" class="button">Return to top!</a></li>
-								</ul>
-							</div>
 
-
-
-
-							< <ul class="labeled-icons">
+							<ul class="labeled-icons">
 
 
 				                <li>
@@ -148,9 +140,12 @@
 				                    United States
 				                </li>
 				            </ul>
-									
+
+							<div style="text-align: right;">
+								<ul class="actions" style="display: inline-block; margin-right: 10px;">
+								    <li><a href="#main" class="button">Return to top!</a></li>
+								</ul>
 							</div>
-						</div>
 					</section>
 
 				<!-- Five -->
