--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 				<section id="project-details">
 				    <h2>Project Details</h2>
 				    <p>Details about the lionfish dispersal project...</p>
-				    <img src="images/fulls/lionfish.jpg" alt="Lionfish Full" />
+				    <img src="images/fulls/lionfish_thumb.jpg" alt="Lionfish Full" />
 				    <p>Additional images or information can go here...</p>
 				</section>
 
