--- a/index.html
+++ b/index.html
@@ -53,25 +53,25 @@
 								<a href="images/fulls/lionfish_thumb.jpg" class="image fit thumb"><img src="images/thumbs/lionfish_thumb.jpg" alt="" /></a>
 								<h3>Lionfish Dispersal</h3>
 								<p>Using otolith microchemistry to track dispersal of lionfish between deep and shallow habitat.</p>
-								<a href="#project-details" class="button">Learn More</a>
+								<a href="#lionfish-details" class="button">Learn More</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/lake.jpg" class="image fit thumb"><img src="images/thumbs/lake.jpg" alt="" /></a>
 								<h3>Non-native predators in montane lakes</h3>
 								<p>Using community data from the Adirondack park to determine patterns of species assemblages.</p>
-								<a href="#project-details" class="button">Learn More</a>
+								<a href="#non-native-predators" class="button">Learn More</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/lake2.jpg" class="image fit thumb"><img src="images/thumbs/lake2.jpg" alt="" /></a>
 								<h3>Fine-scale habitat use of native littoral fishes</h3>
 								<p>Using a two-decade long study of fish communities in Adirondack lakes to examine habitat use and species associations.</p>
-								<a href="#project-details" class="button">Learn More</a>
+								<a href="#fine-scale-habitat" class="button">Learn More</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/bg.jpg" class="image fit thumb"><img src="images/thumbs/bg.jpg" alt="" /></a>
 								<h3>Trophic diversity of native minnows</h3>
 								<p>Using stable isotopes to examine the trophic diversity, niche overlap, and diet specialization of native leuciscidae.</p>
-								<a href="#project-details" class="button">Learn More</a>
+								<a href="#trophic-diversity" class="button">Learn More</a>
 							</article>
 
 
@@ -83,14 +83,35 @@
 
 				<!-- Three -->
 
-				<section id="project-details">
+				<section id="lionfish-details">
+				    <h2>Project Details</h2>
+				    <p>Details about the lionfish dispersal project...</p>
+				    <img src="images/fulls/lionfish_thumb.jpg" alt="Lionfish Full" />
+				    <p>Additional images or information can go here...</p>
+				</section>
+				<!-- Four -->
+				<section id="non-native-predators">
+				    <h2>Project Details</h2>
+				    <p>Details about the lionfish dispersal project...</p>
+				    <img src="images/fulls/lionfish_thumb.jpg" alt="Lionfish Full" />
+				    <p>Additional images or information can go here...</p>
+				</section>
+				<!-- Five -->
+				<section id="fine-scale-habitat">
+				    <h2>Project Details</h2>
+				    <p>Details about the lionfish dispersal project...</p>
+				    <img src="images/fulls/lionfish_thumb.jpg" alt="Lionfish Full" />
+				    <p>Additional images or information can go here...</p>
+				</section>
+				<!-- Six -->
+				<section id="trophic-diversity">
 				    <h2>Project Details</h2>
 				    <p>Details about the lionfish dispersal project...</p>
 				    <img src="images/fulls/lionfish_thumb.jpg" alt="Lionfish Full" />
 				    <p>Additional images or information can go here...</p>
 				</section>
 
-
+				<!-- Seven -->
 				<section id="CV">
 						<h2>Education and Resume</h2>
 
