--- a/index.html
+++ b/index.html
@@ -84,30 +84,30 @@
 				<!-- Three -->
 
 				<section id="lionfish-details">
-				    <h2>Project Details</h2>
-				    <p>Details about the lionfish dispersal project...</p>
-				    <img src="images/fulls/lionfish_thumb.jpg" alt="Lionfish Full" />
+				    <h2>Using otolith microchemistry to track dispersal of lionfish between deep and shallow habitat.s</h2>
+				    <p>Details </p>
+				    <img src="" alt="Lionfish Full" />
 				    <p>Additional images or information can go here...</p>
 				</section>
 				<!-- Four -->
 				<section id="non-native-predators">
-				    <h2>Project Details</h2>
-				    <p>Details about the lionfish dispersal project...</p>
-				    <img src="images/fulls/lionfish_thumb.jpg" alt="Lionfish Full" />
+				    <h2>Using community data from the Adirondack park to determine patterns of species assemblages</h2>
+				    <p>Details </p>
+				    <img src="" alt="Lionfish Full" />
 				    <p>Additional images or information can go here...</p>
 				</section>
 				<!-- Five -->
 				<section id="fine-scale-habitat">
-				    <h2>Project Details</h2>
-				    <p>Details about the lionfish dispersal project...</p>
-				    <img src="images/fulls/lionfish_thumb.jpg" alt="Lionfish Full" />
+				    <h2>Using a two-decade long study of fish communities in Adirondack lakes to examine habitat use and species associations.</h2>
+				    <p>Details</p>
+				    <img src="" alt="Lionfish Full" />
 				    <p>Additional images or information can go here...</p>
 				</section>
 				<!-- Six -->
 				<section id="trophic-diversity">
-				    <h2>Project Details</h2>
-				    <p>Details about the lionfish dispersal project...</p>
-				    <img src="images/fulls/lionfish_thumb.jpg" alt="Lionfish Full" />
+				    <h2>Using stable isotopes to examine the trophic diversity, niche overlap, and diet specialization of native leuciscidae.</h2>
+				    <p>Details </p>
+				    <img src="" alt="Lionfish Full" />
 				    <p>Additional images or information can go here...</p>
 				</section>
 
