--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 				<section id="lionfish-details">
 				    <h2>Using otolith microchemistry to track dispersal of lionfish between deep and shallow habitat.s</h2>
 				    <p>Details </p>
-				    <img src="" alt="Lionfish Full" />
+				    <img src="images/thumbs/lionfish_thumb_tiny.jpg" alt="Lionfish thumb" />
 				    <p>Additional images or information can go here...</p>
 				</section>
 				<!-- Four -->
