--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 				<!-- Three -->
 
 				<section id="lionfish-details">
-				    <h2>Using otolith microchemistry to track dispersal of lionfish between deep and shallow habitat.s</h2>
+				    <h2>Using otolith microchemistry to track dispersal of lionfish between deep and shallow habitats.</h2>
 				    <p>Details </p>
 				    <img src="images/thumbs/lionfish_thumb_tiny.jpg" alt="Lionfish thumb" />
 				    <p>Additional images or information can go here...</p>
