--- a/index.html
+++ b/index.html
@@ -86,8 +86,17 @@
 				<section id="lionfish-details">
 				    <h2>Using otolith microchemistry to track dispersal of lionfish between deep and shallow habitats.</h2>
 				    <p>Details </p>
-				    <img src="images/thumbs/lionfish_thumb_tiny.jpg" alt="Lionfish thumb" />
+				    <img src="images/thumbs/lionfish_thumb_tiny.jpg" alt="Lionfish thumb"  class="float-image" />/>
 				    <p>Additional images or information can go here...</p>
+
+				    <style>
+					  .float-image {
+					    float: left;
+					    margin-right: 10px;
+					  }
+					</style>
+
+					
 				</section>
 				<!-- Four -->
 				<section id="non-native-predators">
