--- a/index.html
+++ b/index.html
@@ -85,9 +85,8 @@
 
 				<section id="lionfish-details">
 				    <h2>Using otolith microchemistry to track dispersal of lionfish between deep and shallow habitats.</h2>
-				    <p>Details </p>
-				    <img src="images/thumbs/lionfish_thumb_tiny.jpg" alt="Lionfish thumb"  class="float-image" />/>
-				    <p>Additional images or information can go here...</p>
+				    <img src="images/thumbs/lionfish_thumb_tiny.jpg" alt="Lionfish thumb"  class="float-image" />
+				    <p>Lionfish are a highly successful marine invader that negatively influence the native communities and trophic structure of Caribbean food webs. Highly flexible in terms of habitat use, these fish inhabit a wide range of depths and habitat type. In turn, large populations of lionfish persist in deep-water refugia. We examined the connections between deep and shallow populations of lionfish using d13C and d18O of otoliths. </p>
 
 				    <style>
 					  .float-image {
@@ -96,7 +95,11 @@
 					  }
 					</style>
 
-					
+
+					<p>Read more</p>
+					<p>Airey, Montana E., Alexander Q. Fogg, and Joshua A. Drew. "Invasive lionfish dispersal between shallow-and deep-water habitats within coastal Floridian waters." Biological Invasions 25.12 (2023): 3983-3991.</p>
+
+
 				</section>
 				<!-- Four -->
 				<section id="non-native-predators">
