--- a/index.html
+++ b/index.html
@@ -98,16 +98,23 @@
 
 					<p>Read more</p>
 					<p>Airey, Montana E., Alexander Q. Fogg, and Joshua A. Drew. "Invasive lionfish dispersal between shallow-and deep-water habitats within coastal Floridian waters." Biological Invasions 25.12 (2023): 3983-3991.</p>
-
-
 				</section>
+
+
+
 				<!-- Four -->
 				<section id="non-native-predators">
 				    <h2>Using community data from the Adirondack park to determine patterns of species assemblages</h2>
 				    <p>Details </p>
-				    <img src="" alt="Lionfish Full" />
+				    <img src="images/thumbs/minnows_gif.gif" alt="Lionfish Full" />
 				    <p>Additional images or information can go here...</p>
 				</section>
+
+
+
+
+
+
 				<!-- Five -->
 				<section id="fine-scale-habitat">
 				    <h2>Using a two-decade long study of fish communities in Adirondack lakes to examine habitat use and species associations.</h2>
