--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 				<section id="non-native-predators">
 				    <h2>Using community data from the Adirondack park to determine patterns of species assemblages</h2>
 				    <p>Details </p>
-				    <img src="images/thumbs/minnows_gif.gif" alt="Lionfish Full" />
+				    <img src="images/thumbs/minnows_gif.gif" alt="gif" />
 				    <p>Additional images or information can go here...</p>
 				</section>
 
